--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="#">Serviços</a>
                     </li>
                     <li>
-                        <img src="images/logo.png" alt="Barber Shop">
+                        <img src="images/logo.png" class="logo" alt="Barber Shop">
                     </li>
                     <li>
                         <a href="#">Galeria</a>
