--- a/index.html
+++ b/index.html
@@ -1,44 +1,157 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barber Shop</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <section class="home">
-        <header class="header">
-            <nav class="nav">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Sobre</a>
-                    </li>
-                    <li>
-                        <a href="#">Serviços</a>
-                    </li>
-                    <li>
-                        <img src="images/logo.png" class="logo" alt="Barber Shop">
-                    </li>
-                    <li>
-                        <a href="#">Galeria</a>
-                    </li>
-                    <li>
-                        <a href="#">Agendamento</a>
-                    </li>
-                    <li>
-                        <a href="#">Localização</a>
-                    </li>
-                </ul>
-            </nav>         
-        </header>
+      <header class="header">
+        <nav class="nav">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Sobre</a>
+            </li>
+            <li>
+              <a href="#">Serviços</a>
+            </li>
+            <li>
+              <img src="images/logo.png" class="logo" alt="Barber Shop" />
+            </li>
+            <li>
+              <a href="#">Galeria</a>
+            </li>
+            <li>
+              <a href="#">Agendamento</a>
+            </li>
+            <li>
+              <a href="#">Localização</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="banner">
+        <span class="slogan1">Profissionalismo e Excelência</span>
+        <h1>Barber Shop</h1>
+        <span class="slogan2">O melhor lugar para cuidar do seu estilo.</span>
+        <img src="images/much-img.png" class="bigode" alt="Barber Shop" />
+      </div>
     </section>
-</body>
+
+    <section class="about">
+      <div class="container">
+        <div class="timing">
+          <div class="overlay">
+            <img src="images/classic-cut.png" class="icon-cut" alt="Horários" />
+            <h3>Horários</h3>
+            <div class="text">
+              <h4>Segunda-Feira à Sexta-Feira</h4>
+              <span>09:00 AM - 17:00 PM</span>
+            </div>
+            <div class="text">
+              <h4>Sábado</h4>
+              <span>09:00 AM - 14:00 PM</span>
+            </div>
+            <div class="text">
+              <h4>Domingo</h4>
+              <span>Fechado</span>
+            </div>
+
+            <br />
+            <img src="images/loc-ic.png" alt="Localização" />
+            <span>Rua da Matrix, 777</span>
+            <br />
+            <img src="images/phone-ic.png" alt="Telefone" />
+            <span>(79) 99999-9999</span>
+          </div>
+        </div>
+        <div class="experience">
+          <span>Uma História Única</span>
+          <h2>52 Anos de Experiência</h2>
+          <div class="text">
+            <div>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non
+                aut aperiam quo ea! Optio repellat fugit iusto ducimus,
+                distinctio iste qui officia exercitationem quae eos laboriosam,
+                omnis consectetur veritatis quasi.
+              </p>
+
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non
+                aut aperiam quo ea! Optio repellat fugit iusto ducimus,
+                distinctio iste qui officia exercitationem quae eos laboriosam,
+                omnis consectetur veritatis quasi.
+              </p>
+
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non
+                aut aperiam quo ea! Optio repellat fugit iusto ducimus,
+                distinctio iste qui officia exercitationem quae eos laboriosam,
+                omnis consectetur veritatis quasi.
+              </p>
+            </div>
+            <img src="images/shave-brush.jpg" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container">
+        <h2>Nossos Serviços</h2>
+        <img src="images/heading-ic.png" alt="Nossos Serviços" />
+
+        <div class="boxes">
+          <div class="box">
+            <img src="images/classic-cut.png" alt="Classic Cult" />
+            <h4>Lorem Ipsum</h4>
+            <img src="images/head-line-ic.png" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              cum, modi ut nihil fugiat perspiciatis quibusdam ratione rerum
+              atque, asperiores quisquam voluptatibus dolor deleniti ipsa hic
+              reiciendis libero distinctio eius.
+            </p>
+          </div>
+
+          <div class="box">
+            <img src="images/clipper-cut.png" alt="Cliper Cult" />
+            <h4>Lorem Ipsum</h4>
+            <img src="images/head-line-ic.png" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              cum, modi ut nihil fugiat perspiciatis quibusdam ratione rerum
+              atque, asperiores quisquam voluptatibus dolor deleniti ipsa hic
+              reiciendis libero distinctio eius.
+            </p>
+          </div>
+
+          <div class="box">
+            <img src="images/razoe-shaver.png" alt="Razoe Shaver" />
+            <h4>Lorem Ipsum</h4>
+            <img src="images/head-line-ic.png" />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              cum, modi ut nihil fugiat perspiciatis quibusdam ratione rerum
+              atque, asperiores quisquam voluptatibus dolor deleniti ipsa hic
+              reiciendis libero distinctio eius.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
