Seção de Appointment

--- a/index.html
+++ b/index.html
@@ -153,5 +153,51 @@
         </div>
       </div>
     </section>
+
+    <section class="appointment">
+      <div class="container">
+        <h2>Faça um Agendamento</h2>
+        <img src="images/heading-ic-white.png" alt="Faça um Agendamento" />
+
+        <form>
+          <div class="personal-date">
+            <div class="input-wrapper">
+              <label for="nome">Nome</label>
+              <input type="text" name="nome" placeholder="Digite seu Nome" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="email">E-mail</label>
+              <input type="mail" name="email" placeholder="Digite seu E-mail" />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="telefone">Telefone</label>
+              <input
+                type="phone"
+                name="tel"
+                placeholder="Digite seu Telefone"
+              />
+            </div>
+
+            <div class="input-wrapper">
+              <label for="servico">Tipo de Serviço</label>
+              <select name="servico">
+                <option value="Serviço 01">Serviço 01</option>
+                <option value="Serviço 02">Serviço 02</option>
+                <option value="Serviço 03">Serviço 03</option>
+                <option value="Serviço 04">Serviço 04</option>
+              </select>
+            </div>
+          </div>
+          <div class="input-wrapper">
+            <label for="mensagem">Mensagem:</label>
+            <textarea></textarea>
+          </div>
+
+          <button>Enviar</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
